# ia-project

./: .gitignore  CMakeLists.txt  README
container/: Dockerfile  Makefile  README.md  package.json
include/: board.h  features.h  input.h  piece.h  tabu.h  tabu_list.h
linux/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: board.c  features.c  input.c  main.c  piece.c  tabu.c  tabu_list.c
